--- a/src/styles/signup.module.css
+++ b/src/styles/signup.module.css
@@ -1,7 +1,13 @@
+/* Signup.module.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* ローカルクラスを使ってスタイルを適用 */
 .title {
   text-align: center;
-  color: #333;
-  margin-bottom: 20px;
+  color: #333 !important;
+  margin-bottom: 20px !important;
 }
 
 .container {
