globals.cssから不要な設定を削除し、signup.module.cssでTailwindのインポートを修正

--- a/src/styles/signup.module.css
+++ b/src/styles/signup.module.css
@@ -1,7 +1,7 @@
 /* Signup.module.css */
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
 /* ローカルクラスを使ってスタイルを適用 */
 .title {
